cockroachlabs-preview-main/docs/v23.2/reset-vars.mdx
---
title: "RESET {session variable}"
old_description: "The SET statement resets a session variable to its default value."
---

import { ResetVars2 } from "/snippets/syntax-diagrams/ResetVars2.jsx";

The `RESET` [statement](/docs/v23.2/sql-statements) resets a [session variable](/docs/v23.2/set-vars) to its default value for the client session.

## Required privileges

No [privileges](/docs/v23.2/security-reference/authorization#managing-privileges) are required to reset a session setting.

## Synopsis

<ResetVars2 />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>session&#95;var</code></td><td>The name of the <a href="/docs/v23.2/set-vars#supported-variables">session variable</a>.</td></tr></tbody></table>

## Example

<Tip>
You can use [`SET.. TO DEFAULT`](/docs/v23.2/set-vars#reset-a-variable-to-its-default-value) to reset a session variable as well.
</Tip>

```sql
> SET extra_float_digits = -10;
```

```sql
> SHOW extra_float_digits;
```

```text
 extra_float_digits
--------------------
 -10
(1 row)
```

```sql
> SELECT random();
```

```text
 random
---------
 0.20286
(1 row)
```

```sql
> RESET extra_float_digits;
```

```sql
> SHOW extra_float_digits;
```

```text
 extra_float_digits
--------------------
 0
(1 row)
```

```sql
> SELECT random();
```

```text
      random
-------------------
 0.561354028296755
(1 row)
```

## See also

- [`SET {session variable}`](/docs/v23.2/set-vars)
- [`SHOW {session variable}`](/docs/v23.2/show-vars)
